--- a/css/homestyles.css
+++ b/css/homestyles.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,400&family=Oswald:wght@300;400;500;600;700&family=PT+Sans:wght@400;700&display=swap");
+
 :root {
     --red: #ef0f0f;
     --light-gray: #e1e1e1;
     --dark-bg: #121212;
 }
+
 * {
     margin: 0px;
     padding: 0px;
@@ -12,6 +14,7 @@
 
 html {
     font-family: "Oswald";
+    scroll-behavior: smooth;
 }
 
 ul {
@@ -22,11 +25,13 @@ a {
     text-decoration: none;
     color: #333;
 }
+
 #header {
     width: 100%;
     background-color: transparent;
     position: fixed;
 }
+
 header {
     display: flex;
     justify-content: space-between;
@@ -82,14 +87,16 @@ header {
     padding: 6px 25px !important;
     transition: all 0.25s ease-in-out;
 }
+
 .border-red:hover {
-    background-color: #e1e1e12a;
+    background-color: var(--red);
 }
 
 /* -- HERO SECTION -- */
 img {
     max-width: 100%;
 }
+
 #hero {
     background: url("../img/hero.png") no-repeat center center/cover;
     /* background-color: white;
@@ -118,26 +125,31 @@ img {
     flex-direction: column;
     /* position: relative; */
 }
+
 .hero-left {
     position: absolute;
     left: -60px;
     height: 280px;
     top: 3px;
 }
+
 #hero h1 {
     margin-bottom: 25px;
 }
+
 #hero h2 {
     margin-bottom: 25px;
 }
+
 #hero p {
     color: #e1e1e1;
     letter-spacing: 3px;
     line-height: 2rem;
     width: 45%;
     text-align: center;
-    font-weight: 500;
-    margin-bottom: 35px;
+    font-weight: 400;
+    margin-bottom: 30px;
+    font-size: 20px;
 }
 
 .btn {
@@ -145,6 +157,11 @@ img {
     color: white;
     background: #838383;
     letter-spacing: 1.05px;
+    transition: all .2s ease-in-out;
+}
+
+.btn:hover {
+    background-color: #e73a3a;
 }
 
 .btn-red {
@@ -193,6 +210,7 @@ img {
     min-height: 90vh;
     background-color: var(--dark-bg);
 }
+
 #about {
     display: flex;
     justify-content: space-between;
@@ -203,31 +221,39 @@ img {
     min-height: 90vh;
     color: white;
 }
+
 #about h2 {
     margin: 25px 0;
     font-size: 58px;
 }
+
 #about p {
     color: var(--light-gray);
     font-size: 26px;
     font-weight: 300;
     line-height: 155%;
 }
+
 #about .left,
 #about .right {
     width: 50%;
     /* border: 1px solid red; */
 }
+
 #about h3 {
     color: var(--red);
-    font-size: 22px;
+    font-size: 18px;
+    letter-spacing: 0.145em;
 }
+
 #about .video {
     height: 415px;
 }
+
 #about .left {
     padding-right: 30px;
 }
+
 #about .right {
     display: flex;
     justify-content: center;
@@ -244,6 +270,7 @@ img {
     bottom: 0;
     left: 0;
 }
+
 .right-border {
     width: 100px;
     height: 100px;
@@ -257,6 +284,7 @@ img {
     color: #838383;
     box-shadow: 0 3px 1rem rgba(0, 0, 0, 0.1);
 }
+
 .scrolling-active header {
     height: 8vh;
     /* align-items: center; */
@@ -267,10 +295,12 @@ img {
     color: white;
     padding: 20px 0;
 }
+
 #footer p {
     text-align: center;
     font-weight: 300;
 }
+
 .footer-nav {
     display: flex;
     justify-content: space-between;
@@ -287,6 +317,7 @@ img {
     margin: 0 15px;
     color: #fff;
 }
+
 .footer-nav i {
     margin-right: 15px;
 }
@@ -309,12 +340,15 @@ img {
     header {
         /* flex-direction: column; */
     }
+
     .navItems {
         display: none;
     }
+
     #hamburger {
         display: block;
     }
+
     #hero h1,
     #hero h2,
     #hero p {
@@ -327,18 +361,22 @@ img {
 }
 
 @media screen and (max-width: 1080px) {
+
     #hero h1,
     #hero h2 {
         width: 70%;
         /* margin: 0 auto; */
     }
+
     #hero p {
         width: 58%;
     }
+
     #about {
         flex-direction: column;
         padding: 40px 0;
     }
+
     #about .left,
     #about .right {
         width: 90%;
@@ -352,9 +390,11 @@ img {
     #about h2 {
         font-size: 50px;
     }
+
     #about p {
         font-size: 20px;
     }
+
     #about h3 {
         font-size: 17px;
     }
