--- a/css/homestyles.css
+++ b/css/homestyles.css
@@ -80,10 +80,10 @@ header {
 .border-red {
     border: 3px solid var(--red);
     padding: 6px 25px !important;
-    transition: all 0.25s ease-in-out;
+    transition: all 2s ease-in-out;
 }
 .border-red:hover {
-    background-color: #e1e1e12a;
+    background-color: red;
 }
 
 /* -- HERO SECTION -- */
