--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,400&family=Oswald:wght@300;400;500;600;700&family=PT+Sans:wght@400;700&display=swap");
-
 :root {
     --red: #ef0f0f;
     --light-gray: #e1e1e1;
     --dark-bg: #121212;
 }
-
 * {
     margin: 0px;
     padding: 0px;
@@ -14,7 +12,6 @@
 
 html {
     font-family: "Oswald";
-    scroll-behavior: smooth;
 }
 
 ul {
@@ -26,12 +23,37 @@ a {
     color: #333;
 }
 
+img {
+    max-width: 100%;
+}
+
+.btn {
+    padding: 11px 30px;
+    color: white;
+    background: #838383;
+    letter-spacing: 1.05px;
+}
+
+.btn-red {
+    background-color: var(--red);
+}
+
+.red-tag {
+    color: var(--red);
+    font-size: 22px;
+}
+
+.btn-gray {
+    background: transparent;
+    border: 1px solid var(--red);
+}
+
+/* --- HEADER --- */
 #header {
     width: 100%;
     background-color: transparent;
     position: fixed;
 }
-
 header {
     display: flex;
     justify-content: space-between;
@@ -70,27 +92,6 @@ header {
     position: relative;
 }
 
-.active-nav:hover {
-    opacity: 1;
-}
-
-.active-nav::before {
-    transition: 300ms;
-    height: 5px;
-    content: "";
-    position: absolute;
-    background-color: #031D44;
-}
-
-.active-nav:before {
-    width: 0%;
-    bottom: 10px;
-}
-
-.active-nav:hover::before {
-    width: 100%;
-}
-
 .active-nav::before {
     content: "";
     display: block;
@@ -106,87 +107,56 @@ header {
 .border-red {
     border: 3px solid var(--red);
     padding: 6px 25px !important;
-    transition: all 2s ease-in-out;
+    transition: all 0.25s ease-in-out;
+}
+.border-red:hover {
+    background-color: #e1e1e12a;
 }
 
-.border-red:hover {
-    background-color: var(--red);
+.scrolling-active {
+    background-color: #8181814b !important;
+    color: #838383;
+    box-shadow: 0 3px 1rem rgba(0, 0, 0, 0.1);
+}
+.scrolling-active header {
+    height: 8vh;
+    /* align-items: center; */
 }
 
 /* -- HERO SECTION -- */
-img {
-    max-width: 100%;
-}
 
 #hero {
-    background: url("../img/hero.png") no-repeat center center/cover;
-    /* background-color: white;
-    background-image: url("../img/herp.png");
-    background-size: auto 100%;
-    background-repeat: no-repeat;
-    background-position: left top; */
+    background: url("../img/hero-min.png") no-repeat center center/cover;
 
-    /* background-image: url("../img/herp.png");
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    height: 100vh;
-    width: 100vw;
-    padding: 0; */
-
-    /* background: url("../img/herp.png") no-repeat center center fixed; */
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     height: 100vh;
-
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    /* position: relative; */
 }
-
 .hero-left {
     position: absolute;
     left: -60px;
     height: 280px;
     top: 3px;
 }
-
 #hero h1 {
     margin-bottom: 25px;
 }
-
 #hero h2 {
     margin-bottom: 25px;
 }
-
 #hero p {
     color: #e1e1e1;
     letter-spacing: 3px;
-    line-height: 2rem;
     width: 45%;
-    text-align: center;
+    text-align: justify;
     font-weight: 400;
-    margin-bottom: 30px;
-    font-size: 20px;
-}
-
-.btn {
-    padding: 11px 30px;
-    color: white;
-    background: #838383;
-    letter-spacing: 1.05px;
-    transition: all .2s ease-in-out;
-}
-
-.btn:hover {
-    background-color: #e73a3a;
-}
-
-.btn-red {
-    background-color: var(--red);
+    margin-bottom: 35px;
 }
 
 #hamburger {
@@ -195,13 +165,15 @@ img {
 
 #mobile-nav {
     display: none;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(39, 39, 39);
+    width: 100vw;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgb(8, 8, 8);
     color: white;
+    z-index: 99;
 }
 
 #mobile-nav ul {
@@ -210,6 +182,7 @@ img {
     justify-content: center;
     align-items: center;
     height: 100%;
+    animation: fadeIn 1.25s;
 }
 
 #mobile-nav ul li {
@@ -218,20 +191,21 @@ img {
 
 #cross {
     position: absolute;
-    top: 30px;
-    right: 30px;
+    top: 35px;
+    right: 25px;
+    animation: fadeIn 1.25s;
 }
 
 .show {
     display: block !important;
 }
 
-/* -- ABOUT -- */
+/* --- ABOUT --- */
+
 #about-us {
     min-height: 90vh;
     background-color: var(--dark-bg);
 }
-
 #about {
     display: flex;
     justify-content: space-between;
@@ -242,43 +216,28 @@ img {
     min-height: 90vh;
     color: white;
 }
-
 #about h2 {
     margin: 25px 0;
     font-size: 58px;
 }
-
 #about p {
     color: var(--light-gray);
     font-size: 26px;
     font-weight: 300;
     line-height: 155%;
 }
-
 #about .left,
 #about .right {
     width: 50%;
     /* border: 1px solid red; */
 }
 
-#competetivelabel{
-    color: red;
-}
-
-#about h3 {
-    color: var(--red);
-    font-size: 18px;
-    letter-spacing: 0.145em;
-}
-
 #about .video {
     height: 415px;
 }
-
 #about .left {
     padding-right: 30px;
 }
-
 #about .right {
     display: flex;
     justify-content: center;
@@ -295,7 +254,6 @@ img {
     bottom: 0;
     left: 0;
 }
-
 .right-border {
     width: 100px;
     height: 100px;
@@ -304,29 +262,17 @@ img {
     right: 0;
 }
 
-.scrolling-active {
-    background-color: #8181814b !important;
-    color: #838383;
-    box-shadow: 0 3px 1rem rgba(0, 0, 0, 0.1);
-}
-
-.scrolling-active header {
-    height: 8vh;
-    /* align-items: center; */
-}
+/* ---Footer--- */
 
 #footer {
     background: black;
     color: white;
-    padding: 10px 0;
-
+    padding: 20px 0;
 }
-
 #footer p {
     text-align: center;
     font-weight: 300;
 }
-
 .footer-nav {
     display: flex;
     justify-content: space-between;
@@ -343,66 +289,132 @@ img {
     margin: 0 15px;
     color: #fff;
 }
-
 .footer-nav i {
     margin-right: 15px;
 }
 
-.btn-gray {
-    background: transparent;
-    border: 1px solid var(--red);
+/* ---------- PROJECT PAGE ----------- */
+.project-wrap {
+    background-color: #121212;
+    color: white;
+}
+#project {
+    min-height: 100vh;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+    margin: 0 auto;
+}
+#project .left,
+#project .right {
+    width: 50%;
+}
+#project .left h2 {
+    font-size: 47px;
+    margin-top: 40px;
+}
+#project .right h2 {
+    font-size: 47px;
+}
+#project .right {
+    text-align: center;
+}
+#project .right p {
+    width: 60%;
+    margin: 0 auto;
+    font-size: 21px;
+    margin-top: 17px;
+}
+#project .left p {
+    font-size: 30px;
+}
+#project .left {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+#project .left img {
+    margin-top: 50px;
+    margin-left: -70px;
+}
+.graycl {
+    color: #bababa;
 }
 
-/* .video {
-    position: relative;
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
-.left-border {
-    position: absolute;
-    z-index: 100;
-    left: 100px;
-    top: 600px;
-} */
 @media screen and (max-width: 768px) {
     header {
         /* flex-direction: column; */
     }
-
     .navItems {
         display: none;
     }
-
     #hamburger {
         display: block;
     }
-
     #hero h1,
     #hero h2,
     #hero p {
         width: 80%;
     }
+    #hero p {
+        width: 80% !important;
+    }
 
     .active-nav::before {
         bottom: -5px;
     }
+    .footer-nav {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .footer-nav ul {
+        margin: 20px 0;
+        flex-direction: column;
+        text-align: center;
+    }
+    .left-border {
+        left: -30px;
+    }
+    .right-border {
+        right: -30px;
+    }
+    #about .left {
+        padding-right: 0px;
+    }
 }
-
+@media screen and (max-width: 950px) {
+    .navItems {
+        display: none;
+    }
+    #hamburger {
+        display: block;
+    }
+}
 @media screen and (max-width: 1080px) {
-
     #hero h1,
     #hero h2 {
         width: 70%;
         /* margin: 0 auto; */
     }
-
     #hero p {
         width: 58%;
     }
-
     #about {
         flex-direction: column;
         padding: 40px 0;
     }
-
     #about .left,
     #about .right {
         width: 90%;
@@ -410,29 +422,31 @@ img {
 
         /* border: 1px solid red; */
     }
+    #project {
+        flex-direction: column;
+        padding: 70px 0;
+    }
+    #project .left,
+    #project .right {
+        width: 90%;
+        margin: 30px auto;
+    }
+    #project .right p {
+        width: 90%;
+        margin: 0 auto;
+        font-size: 21px;
+        margin-top: 17px;
+    }
 }
 
 @media screen and (max-width: 1400px) {
     #about h2 {
         font-size: 50px;
     }
-
     #about p {
         font-size: 20px;
     }
-
     #about h3 {
         font-size: 17px;
     }
 }
-
-#footer .shoutout {
-    color: gray;
-    position: absolute;
-    bottom: 1;
-    font-size: 12px;
-    right: 22px;
-}
-
-
-
