navbar doesnt need to be fixed since theres nothing much to scroll down to

--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,8 @@ img {
 #header {
     width: 100%;
     background-color: transparent;
-    position: fixed;
+    position: absolute;
+    top:0;
 }
 
 header {
