red border - see summary
the red borders are in weird positions, best to not include them unless there's some way for them to be positioned exactly at the corners across multiple viewports.

--- a/css/style.css
+++ b/css/style.css
@@ -299,7 +299,7 @@ header {
     margin: 0 50px;
 }
 
-.left-border {
+/* .left-border {
     width: 100px;
     height: 100px;
     position: absolute;
@@ -313,7 +313,7 @@ header {
     position: absolute;
     top: 0;
     right: 0;
-}
+} */
 
 /* ---Footer--- */
 
