--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 
 html {
     font-family: "Oswald";
+    scroll-behavior: smooth;
 }
 
 ul {
@@ -170,9 +171,9 @@ header {
 #hero p {
     color: #e1e1e1;
     letter-spacing: 3px;
-    width: 45%;
+    width: 55%;
     text-align: center;
-    font-weight: 500;
+    font-weight: 400;
     margin-bottom: 35px;
     font-size: 18px;
     line-height: 30px;
