--- a/css/style.css
+++ b/css/style.css
@@ -507,10 +507,12 @@ header {
     background: #2c2929;
     width: 62%;
     display: flex;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 7px 29px 0px;
     justify-content: space-between;
     padding: 18px 28px;
     /* padding-left: 30px; */
     margin-top: 45px;
+    border-radius: 2%;
 }
 
 .speaker img {
