--- a/css/style.css
+++ b/css/style.css
@@ -162,11 +162,13 @@ header {
 #hero p {
     color: #e1e1e1;
     letter-spacing: 3px;
-    width: 45%;
+    letter-spacing: 1px;
+    width: 55%;
     text-align: center;
-    font-weight: 500;
+    font-weight: 400;
     margin-bottom: 35px;
     font-size: 18px;
+    font-size: 20px;
     line-height: 30px;
 }
 
@@ -184,7 +186,7 @@ header {
         transform: translateY(0);
     }
     50% {
-        transform: translateY(-35px);
+        transform: translateY(-10px);
     }
     100% {
         transform: translateY(0);
