--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@
     padding: 0px;
     box-sizing: border-box;
 }
-
+body {
+    background-color: #121212;
+}
 html {
     font-family: "Oswald";
 }
@@ -44,9 +46,16 @@ img {
 
 .red-tag {
     color: var(--red);
-    font-size: 22px;
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 0.140em;
 }
-
+.red-tag2 {
+    color: var(--red);
+    font-size: 20px;
+    font-weight: 700;
+    font-size: 17px;
+}
 .btn-gray {
     background: transparent;
     border: 1px solid var(--red);
@@ -472,6 +481,8 @@ header {
     padding: 18px 28px;
     /* padding-left: 30px; */
     margin-top: 45px;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 7px 29px 0px;
 }
 .speaker img {
     width: 50px;
@@ -505,7 +516,8 @@ header {
 /* --Rocket Section --*/
 #rocket {
     background: #121212;
-    padding: 180px 0;
+  margin-bottom: 50px;
+
 }
 #rocket h1 {
     color: white;
@@ -519,7 +531,7 @@ header {
     letter-spacing: 1.1px;
 }
 .orange-txt {
-    color: rgb(240, 181, 71);
+    color: #FF9534;
 }
 #rocket p {
     color: #bababa;
@@ -555,6 +567,7 @@ header {
 /* ----- SPONSOR PAGE ----- */
 .sponsor {
     background: #121212 !important;
+
 }
 #logos {
     background: #121212;
@@ -648,7 +661,7 @@ header {
     background: url("../img/team-hero.png") no-repeat center center/cover !important;
 }
 .team h3 {
-    font-size: 28px;
+    font-size: 20px;
     letter-spacing: 1.2px;
 }
 .team h1 {
@@ -706,12 +719,12 @@ header {
     margin-bottom: 20px;
 }
 .event-container p {
-    text-align: center;
+
     color: #bababa;
     font-size: 21px;
     /* margin-top: 30px; */
 }
-#jahan {
+/* #jahan {
     background: #1c1a1b;
 }
 #jahan img {
@@ -729,7 +742,7 @@ header {
 #jahan-right {
     padding: 20px 20px;
     padding-left: 25px;
-}
+} */
 
 /*  -- Web Dev Section --*/
 #web-dev {
@@ -786,12 +799,14 @@ header {
     padding-top: 100px;
 }
 .contact-wrapper {
+
     width: 70%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 100px;
 }
 #contact h1 {
     color: white;
@@ -936,6 +951,11 @@ input[type=tel]
     width: 67%;
     margin: 0 auto;
     padding-top: 140px;
+}
+#join h1 {
+    font-size: 52px;
+    color:white;
+    margin-bottom: 20px;
 }
 #join input,
 #join textarea {
@@ -1155,6 +1175,24 @@ input[type=tel]
     #join {
         padding-bottom: 30px;
         height: 130vh;
+    }
+    .sponsor{
+        margin-top: 100px;
+        margin-bottom: 70px;
+    }
+    #header {
+        position: absolute;
+        top: 0;
+    }
+    .half-hero {
+        margin-bottom: 30px;
+    }
+    #event {
+        margin-bottom: 70px;
+    }
+    #rocket h1 {
+        text-align: center;
+        font-size: 30px;
     }
 }
 @media screen and (max-width: 950px) {
